[package]
name = "asciify"
version = "0.1.0"
edition = "2021"
description = "A simple CLI to generate ASCII art from a image"
authors = ["Vinicius de Borba"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
colored = "2.0.4"
clap = { version = "4.3.19", features = ["derive"] }
anyhow = "1.0"
